--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  background-color: #C7E7E8;
+  background-color: #A5D8DD;
   width: 250px;
   height: 100vh;
   display: flex;
@@ -10,9 +10,9 @@
 .logo {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #004d4d;
+  color: #1D3557;
   margin-bottom: 30px;
-}
+}#1D3557
 
 .menu {
   list-style: none;
@@ -20,7 +20,7 @@
 
 .menu li {
   font-size: 1rem;
-  color: #005a5a;
+  color: #1D3557;
   margin-bottom: 20px;
   display: flex;
   align-items: center;
@@ -32,5 +32,5 @@
 }
 
 .menu li:hover {
-  color: #002626;
+  color: #1D3557;
 }
