--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,28 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Poppins:wght@400;700&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
+  
 body {
-  font-family: 'Poppins', sans-serif;
-  height: 100vh;
-  overflow: hidden;
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    overflow-y: auto;
 }
-
+  
 .app {
-  display: grid;
-  grid-template-columns: 250px 1fr; /* Barra lateral 250px, conteúdo principal ocupa o restante */
-  height: 100vh;
-  overflow: hidden;
+    display: grid;
+    grid-template-columns: 250px 1fr; /* Define barra lateral e conteúdo principal */
+    height: 100vh;
 }
-
+  
 .main-content {
-  background-color: #A8DADC;
-  padding: 20px;
-  overflow-y: auto; /* Permite rolagem, se necessário */
+    display: flex;
+    flex-direction: column;
+    background-color: #A8DADC;
+    overflow-y: auto;
+    padding: 20px;
+    margin-top: 90px; /* Deve corresponder à altura do cabeçalho */
 }
