--- a/src/components/PDV.css
+++ b/src/components/PDV.css
@@ -1,112 +1,117 @@
 /* Estilo geral */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
     background-color: #eaf6f8;
     color: #333;
-  }
-  
-  .pdv-container {
+}
+
+.pdv-container {
     display: flex;
     flex-direction: column;
     height: 100vh;
-  }
-  
-  /* Cabeçalho */
-  .pdv-header {
+}
+
+/* Cabeçalho */
+.pdv-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #007b9e;
     color: #fff;
     padding: 10px 20px;
-  }
-  
-  .pdv-logo {
+    border-radius: 8px;
+}
+
+.pdv-logo {
     font-size: 1.5rem;
     font-weight: bold;
-  }
-  
-  .pdv-user {
+    
+}
+
+.pdv-user {
     display: flex;
     align-items: center;
-  }
-  
-  .user-avatar {
+    
+}
+
+.user-avatar {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     margin-left: 10px;
-  }
-  
-  /* Conteúdo principal */
-  .pdv-main {
+}
+
+/* Conteúdo principal */
+.pdv-main {
     display: flex;
     flex: 1;
-    padding: 20px;
-    gap: 20px;
-  }
-  
-  .pdv-products {
+    padding: 5px;
+    gap: 10px;
+}
+
+.pdv-products {
     flex: 2;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-  }
-  
-  .product-header,
-  .product-item {
+}
+
+.product-header {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 1fr;
     padding: 10px 15px;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  .product-header {
     background-color: #f5f5f5;
     font-weight: bold;
-  }
-  
-  .product-item {
+    border-bottom: 1px solid #ddd;
+}
+
+.product-item {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr 1fr;
+    padding: 10px 15px;
     background-color: #fff;
-  }
-  
-  .pdv-details {
+}
+
+.pdv-details {
     flex: 1;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-  }
-  
-  .details-header {
+}
+
+.details-header {
     font-size: 1.2rem;
     font-weight: bold;
-    margin-bottom: 15px;
-  }
-  
-  .details-content div {
-    margin-bottom: 10px;
-  }
-  
-  /* Rodapé */
-  .pdv-footer {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.details-content div {
+    margin-bottom: 100px;
+}
+
+/* Rodapé */
+.pdv-footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #007b9e;
+    border-radius: 8px;
     color: #fff;
-    padding: 10px 20px;
-  }
-  
-  .total-container {
-    font-size: 1.5rem;
+    padding: 14px 20px;
+}
+
+.total-container {
+    font-size: 1.4rem;
     font-weight: bold;
-  }
-  
-  .keyboard-hint {
-    font-size: 0.9rem;
-  }
-  
+}
+
+.keyboard-hint {
+    font-size: 1.2rem;
+    text-align: right;
+}
