--- a/src/components/AdicionarProduto.css
+++ b/src/components/AdicionarProduto.css
@@ -1,87 +1,85 @@
 .adicionar-produto-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 5px;
-    background-color: #A8DADC;
-  }
-  
-  .adicionar-produto-container h2 {
-    text-align: left;
-    margin-bottom: 20px;
-    color: #1D3557;
-  }
-  
-  /* Adicionar um container flex para os cards */
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .card-container {
-    display: flex; /* Torna o container flexível */
-    flex-wrap: wrap; /* Permite que os cards se movam para a próxima linha quando necessário */
-    gap: 20px; /* Espaçamento entre os cards */
-  }
-  
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #A8DADC;
+}
+
+.adicionar-produto-container h2 {
+  text-align: left;
+  margin-bottom: 20px;
+  color: #1D3557;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card {
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+  flex: 1 1 calc(33.33% - 20px);
+  box-sizing: border-box;
+}
+
+.card:last-child {
+  margin-right: 0;
+}
+
+.form-group label {
+  display: block;
+  color: rgb(100, 99, 99);
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  background-color: #EAF5FB;
+  border-radius: 4px;
+}
+
+.form-group textarea {
+  height: 100px;
+}
+
+.btn-submit {
+  width: 100%;
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 15px;
+  margin-top: 30px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+
+}
+
+.btn-submit:hover {
+  background-color: #0056b3;
+}
+
+/* Responsividade */
+@media (max-width: 900px) {
   .card {
-    display: flex;
-    text-align: left;
-    flex-direction: column;
-    flex: 1 1 calc(33.33% - 20px); /* Cards em 3 colunas */
-    box-sizing: border-box;
+    flex: 1 1 calc(50% - 20px);
   }
-  
-  .card:last-child {
-    margin-right: 0;
+}
+
+@media (max-width: 600px) {
+  .card {
+    flex: 1 1 100%;
   }
-  
-  .form-group label {
-    display: block;
-    color: rgb(100, 99, 99);
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
-  .form-group input,
-  .form-group textarea {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    background-color: #EAF5FB;
-    border-radius: 4px;
-  }
-  
-  .form-group textarea {
-    height: 100px;
-  }
-  
-  .btn-submit {
-    width: 100%;
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 15px;
-    margin-top: 30px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    
-  }
-  
-  .btn-submit:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Responsividade */
-  @media (max-width: 900px) {
-    .card {
-      flex: 1 1 calc(50% - 20px); /* 2 cards por linha */
-    }
-  }
-  
-  @media (max-width: 600px) {
-    .card {
-      flex: 1 1 100%; /* 1 card por linha */
-    }
-  }
-  
+}
