--- a/src/components/Stock.css
+++ b/src/components/Stock.css
@@ -82,7 +82,7 @@
 }
 
 .stock-table th {
-  background-color: #007bff;
+  background-color: #007b9e;
   color: white;
   text-transform: uppercase;
 }
